--- a/src/style.scss
+++ b/src/style.scss
@@ -238,15 +238,25 @@ body{
   footer{
     display: flex;
 
-    justify-content: space-around;
+    flex-direction: column;
+
+    justify-content: center;
     align-items: center;
     
+    padding: 1%;
     padding-top: 5%;
     img{
       width: 200px;
     }
+    .Info{
+      display: flex;
+
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .txt{
-      width: 20%;
+      
 
       display: flex;
       flex-direction: column;
@@ -266,6 +276,11 @@ body{
         padding: 2%;
         margin-top: 5%;
       }
+    }
+    h1{
+      font-size: 10px;
+
+      font-weight: 100;
     }
   }
 }
